Add some Styling to our html

--- a/recipes/corn-on-the-cob.html
+++ b/recipes/corn-on-the-cob.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corn On The Cob</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Corn on the cob</h1>
 
-    <img src="../img/corn.jpg" alt="corn" height="200px" width="200px">
+    <img src="../img/corn.jpg" alt="corn">
     <h4>Description</h4>
     <p>Corn on the cob is cooked in boiled water with a little sugar and lemon juice for the sweetest, tastiest corn! My mother-in-law gave me this easy recipe.Corn on the cob is cooked in boiled water with a little sugar and lemon juice for the sweetest, tastiest corn! My mother-in-law gave me this easy recipe.</p>
     
